fix(dashboard): minor z-index fix

--- a/web/abstruse/src/app/dashboard/index/index.component.sass
+++ b/web/abstruse/src/app/dashboard/index/index.component.sass
@@ -50,7 +50,6 @@ $icon-color: #c6f6d5
         overflow: hidden
         height: 0
         width: 100%
-        z-index: 9
 
   .card-content
     position: absolute
